--- a/blog11/package.json
+++ b/blog11/package.json
@@ -13,5 +13,16 @@
     "express": "~4.15.2",
     "morgan": "~1.8.1",
     "serve-favicon": "~2.4.2"
+  },
+  "devDependencies": {
+    "config-lite": "^2.0.0",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^1.3.2",
+    "crypto": "^1.0.1",
+    "express-formidable": "^1.0.0",
+    "express-session": "^1.15.5",
+    "mongolass": "^3.1.4",
+    "mongoose": "^4.11.8",
+    "supervisor": "^0.12.0"
   }
 }
