--- a/blog11/package.json
+++ b/blog11/package.json
@@ -11,8 +11,13 @@
     "debug": "~2.6.3",
     "ejs": "~2.5.6",
     "express": "~4.15.2",
+    "express-winston": "^2.4.0",
+    "marked": "^0.3.6",
+    "moment": "^2.18.1",
     "morgan": "~1.8.1",
-    "serve-favicon": "~2.4.2"
+    "objectid-to-timestamp": "^1.3.0",
+    "serve-favicon": "~2.4.2",
+    "winston": "^2.3.1"
   },
   "devDependencies": {
     "config-lite": "^2.0.0",
