--- a/blog11/package.json
+++ b/blog11/package.json
@@ -2,6 +2,7 @@
   "name": "blog11",
   "version": "0.0.0",
   "private": true,
+  "description": "my first blog",
   "scripts": {
     "start": "node ./bin/www"
   },
@@ -17,6 +18,7 @@
     "morgan": "~1.8.1",
     "objectid-to-timestamp": "^1.3.0",
     "serve-favicon": "~2.4.2",
+    "sha1": "^1.1.1",
     "winston": "^2.3.1"
   },
   "devDependencies": {
