--- a/blog11/package.json
+++ b/blog11/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "description": "my first blog",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app"
   },
   "dependencies": {
     "body-parser": "~1.17.1",
