--- a/blog/package.json
+++ b/blog/package.json
@@ -5,7 +5,7 @@
   "description": "my first blog",
   "scripts": {
     "start": "NODE_ENV=production pm2 start app.js --node-args='--harmony' --name 'myblog'",
-    "heroku": "NODE_ENV=production node --harmony app",
+    "heroku": "NODE_ENV=production node --harmony app.js",
     "test": "node --harmony ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha"
   },
   "dependencies": {
